<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btn_ok">Ok</string>
    <string name="menu_about">About...</string>
    <string name="menu_save_as">Save As...</string>
    <string name="menu_open">Open...</string>
    <string name="menu_new">New document</string>
    <string name="hello">Hello World, ENoteEditor!</string>
    <string name="app_name">Encrypted Notepad</string>
    <string name="app_aname">EncryptedNotepad</string>
	<string name="app_title">%s - Encrypted Notepad</string>
	<string name="about_text">Encrypted Notepad %1$s is (c) 2011. Ivan Voras\n\nContact &amp; support:\nivoras@gmail.com\nhttp://www.sf.net/projects/enotes\n\nReleased under the BSDL.\n\nUsing %2$s</string>
	<string name="default_text">Type here...</string>
	<string name="new_document">*new document*</string>
	<string name="no_etxt_files">There are no *%1$s files in "%2$s"</string>
	<string name="list_etxt_files">*%1$s files in "%2$s"</string>
	<string name="pwd_enter">Enter password:</string>
	<string name="pwd_confirm">Confirm password:</string>
	<string name="ask_filename">Enter filename:</string>
	<string name="notify_mydocs">The document will be saved in the &quot;%s&quot; directory on your SD card.</string>
	<string name="dlg_save_title">Save *.etxt document</string>
	<string name="dlg_open_title">Open *.etxt document</string>
	<string name="pwd_nomatch">Passwords do not match!</string>
	<string name="invalid_filename">Invalid filename!</string>
	<string name="pwd_empty">The password cannot be empty!</string>
	<string name="file_saved">File saved as &quot;%s&quot;</string>
	<string name="dlg_watchthis">Watch this space! Future versions of the app will introduce more customizable options!</string>
	<string name="cb_paranoid">Be (more) paranoid about displaying text after app inactivity</string>
	<string name="menu_options">Options...</string>
	<string name="dlg_prefs_title">Options</string>
</resources>