<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/dafp_layout_root" android:padding="3dp">


<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent"><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ask_filename"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/dafp_filename"></EditText>
</LinearLayout><TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">

<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pwd_enter"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:inputType="textPassword" android:id="@+id/dafp_pwd1" android:layout_marginLeft="3dp"></EditText>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pwd_confirm"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:inputType="textPassword" android:id="@+id/dafp_pwd2" android:layout_marginLeft="3dp"></EditText>
</TableRow>
</TableLayout>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notify_mydocs" android:id="@+id/dafp_notify_my_documents" android:layout_marginLeft="3dp" android:layout_marginRight="3dp" android:layout_gravity="center_horizontal"></TextView>
<Button android:layout_height="wrap_content" android:id="@+id/dafp_btn_ok" android:text="@string/btn_ok" android:layout_gravity="center_horizontal" android:layout_width="100dp"></Button>
</LinearLayout>
